# zk_arcade

./: .gitignore  .prettierrc  Cargo.toml  Makefile  README.md  docker-compose.yml  install_beast.sh  install_beast_cloudflare.sh  install_beast_sepolia.sh  zk_arcade.service
.github/workflows/: ci.yml  contracts_ci.yml  release.yml  web_ci.yml
beast1984/: Cargo.toml  README.md
beast1984/cmd/: .holesky-stage.env  .holesky.env  .mainnet.env  submit_proof.rs
beast1984/cmd/abi/: Leaderboard.json
beast1984/src/: aligned_client.rs  board.rs  game.rs  help.rs  highscore.rs  lib.rs  player.rs  prover.rs  start.rs
beast1984/src/beasts/: common.rs  mod.rs  super_beast.rs
beast1984/src/common/: highscore.rs  levels.rs  mod.rs
beast1984/zkvm_program/src/: main.rs
contracts/: foundry.toml
contracts/script/deploy/: GenerateMerkleProofs.s.sol  LeaderboardDeployer.s.sol  NftContractDeployer.s.sol  OpenNftContractDeployer.s.sol  PublicNftContractDeployer.s.sol  SetBeastGames.s.sol  SetParityGames.s.sol
contracts/script/upgrade/: LeaderboardUpgrade.sol  NftUpgrade.sol  PublicNftUpgrade.sol
contracts/scripts/: .devnet.env  .holesky.env  .mainnet.env  .sepolia.env  add_campaign_merkle_root.sh  add_merkle_root.sh  add_merkle_root_public.sh  create_new_campaign.sh  deploy_contract.sh  deploy_leaderboard_contract.sh  deploy_nft_contract.sh  deploy_nft_contracts.sh  deploy_public_nft_contract.sh  set_beast_games.sh  set_parity_games.sh  upgrade_contract.sh  upgrade_nft_contract.sh  upgrade_public_nft_contract.sh
contracts/src/: Leaderboard.sol  ZkArcadeNft.sol  ZkArcadePublicNft.sol
contracts/test/: LeaderboardInvariantsTop10.t.sol
data/: new_addresses.csv  ofac.csv  preprocess_addresses.py  removed_addresses.csv  whitelist_addresses.csv  whitelist_addresses_devnet.csv
data/discount/: removed_addresses.csv  whitelist_addresses_devnet.csv
data/discount/inserted/: inserted_0.csv
data/discount/inserted_devnet/: inserted_0.csv
data/exclusive/: whitelist_addresses.csv  whitelist_addresses_devnet.csv
data/exclusive/inserted/: inserted_0.csv  inserted_2.csv  inserted_3.csv  inserted_4.csv  inserted_5.csv
data/inserted/: inserted_0.csv
game_logic/src/: board.rs  lib.rs  player.rs  proving.rs  tile.rs
game_logic/src/beasts/: common.rs  common_beast.rs  egg.rs  hatched_beast.rs  super_beast.rs
games/beast/: Cargo.toml  Makefile  README.md
games/beast/beast1984/: Cargo.toml  build.rs  program_vk_commitment.json
games/beast/beast1984/cmd/: .devnet.env  .sepolia.env  submit_proof.rs  write_program_vk.rs
games/beast/beast1984/cmd/abi/: Leaderboard.json
games/beast/beast1984/risc0_program/: Cargo.toml
games/beast/beast1984/risc0_program/src/: main.rs
games/beast/beast1984/sp1_program/: Cargo.toml
games/beast/beast1984/sp1_program/elf/: beast_1984_program
games/beast/beast1984/sp1_program/src/: main.rs
games/beast/beast1984/src/: ethereum.rs  game.rs  help.rs  levels.rs  lib.rs  main.rs  prover.rs  risc0_prover.rs  sp1_prover.rs  start.rs  stty.rs
games/beast/beast1984/tests/: common.rs  help_test.rs
games/beast/beast1984/zkvm_program/: Cargo.toml
games/beast/beast1984/zkvm_program/elf/: beast_1984_program
games/beast/beast1984/zkvm_program/src/: main.rs
games/beast/game_logic/: Cargo.toml
games/beast/game_logic/cmd/: gen_levels.rs
games/beast/game_logic/src/: board.rs  pathing.rs  player.rs  proving.rs  tile.rs
games/beast/game_logic/src/beasts/: common.rs  egg.rs  hatched_beast.rs  super_beast.rs
games/beast/game_logic/src/common/: game.rs  levels.rs  mod.rs
games/beast/game_logic/src/common/levels/: mod.rs  one.rs
games/beast/levels/: devnet.json  holesky.json  leaderboard_devnet.json  leaderboard_holesky.json  leaderboard_mainnet.json  leaderboard_sepolia.json  leaderboard_stage.json  mainnet.json  sepolia.json  stage.json
games/fibonacci/: Makefile  fibonacci.circom
games/parity/: Cargo.toml  Makefile  input.json  parity.circom
games/parity/circuits/: .gitignore  Makefile  package-lock.json  package.json  parity.circom
games/parity/circuits/cmd/: Cargo.toml  program_vk_commitment.json
games/parity/circuits/cmd/src/: main.rs
games/parity/level_generator/: Cargo.toml
games/parity/level_generator/levels/: parity_holesky.json  parity_mainnet.json  parity_sepolia.json
games/parity/level_generator/src/: main.rs
grafana/provisioning/dashboards/: dashboard_provider.yaml
grafana/provisioning/datasources/: datasource.yaml
infra/: .env.grafana  README.md  install_grafana.sh  install_prometheus.sh  prometheus.service  prometheus.yaml  update_grafana_dashboards.sh
merkle-tree/: Cargo.toml  merkle_output.json
merkle-tree/src/: main.rs
merkle_tree/: .env.example  Cargo.toml  merkle_output.json  merkle_output_0.json  merkle_output_1.json  merkle_output_2.json  merkle_output_3.json  merkle_output_4.json  merkle_output_5.json  merkle_output_devnet.json  merkle_output_public_0.json  whitelist.json  whitelist_devnet.json
merkle_tree/src/: main.rs
merkle_tree/whitelisted_addresses/: filtered_0.json  filtered_1.json
prometheus/: prometheus.yaml
test/: README.md  constants.js  deposit_into_aligned.js  estimate_max_fee.js  generate_rich_wallets.sh  generator.js  rich_accounts.json  sign_agreement.js  solution.json  stress_test.js
test/stress/: .env.devnet  .env.sepolia  README.md  constants.js  generate_rich_wallets.sh  generator.js  get_batcher_nonce.js  package-lock.json  package.json  sign_agreement.js  stress_test.js
web/: .env.dev  .tool-versions  Dockerfile  README.md  docker-compose.yml  ecto_setup_db.sh  mix.exs  start.sh
web/assets/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/assets/js/: app.js  (+1 more)
web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
web/lib/: zk_arcade.ex  zk_arcade_web.ex  zkarcade.ex  zkarcade_web.ex
web/prometheus/: prometheus.yaml
zk_arcade_metadata/: create_metadata.py
zkvm/: Cargo.toml  build.rs
zkvm/program/: Cargo.toml
zkvm/program/src/: main.rs
zkvm/src/: main.rs
zkvm_program/: Cargo.toml
zkvm_program/src/: lib.rs  main.rs
(+328 files in other folders)
