[package]
name = "beast1984"
version = "1.0.2"
edition = "2024"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
license = "GPL-3.0-or-later"
description = "An ASCII game built in rust in loving memory of the 1984 hit BEAST by Dan Baker, Alan Brown, Mark Hamilton and Derrick Shadel"
homepage = "https://github.com/dominikwilkowski/beast"
repository = "https://github.com/dominikwilkowski/beast"
readme = "../README.md"
categories = ["command-line-interface", "games"]
keywords = ["cli", "ASCII", "Beast", "game", "homage"]
include = [
	"../README.md",
	"src/**",
	"Cargo.toml",
	"Cargo.lock",
	"LICENSE",
	"tests/**",
]

[[bin]]
name = "beast"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
rand = "0.9.1"
ron = "0.10.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = [
	"serde",
	"formatting",
	"parsing",
	"local-offset",
] }
game_logic = { path = "../game_logic", features = [] }
risc0-zkvm = "2.0.1"
bincode = "1.3.3"

[package.metadata.risc0]
methods = ["./zkvm_program/"]

[build-dependencies]
risc0-build = { version = "2.0.1" }

