[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.147"
serde_json = "1.0"
hex = "0.4"
ethers-core = "2"
sqlx = { version = "0.8.2", features = ["postgres", "macros", "runtime-tokio-rustls", "uuid"] }
merkle-tree-rs = { git = "https://github.com/lambdaclass/merkle-tree-rs" , branch = "main" }
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.uuid]
version = "1.10"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
