[package]
name = "beast_1984_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0.203" }
serde_json = "1.0.117"
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag="v2.0.1", default-features = false, features = ["unstable", "std"] }

[lib]
path = "./src/lib.rs"

[[bin]]
name = "beast_1984"
path = "./src/main.rs"
