[package]
name = "beast1984"
version = "0.3.0"
edition = "2024"
authors = ["Dominik Wilkowski <Hi@Dominik-Wilkowski.com>"]
license = "GPL-3.0-or-later"
description = "An ASCII game built in rust in loving memory of the 1984 hit BEAST by Dan Baker, Alan Brown, Mark Hamilton and Derrick Shadel"
homepage = "https://github.com/dominikwilkowski/beast"
repository = "https://github.com/dominikwilkowski/beast"
readme = "../README.md"
categories = ["command-line-interface", "games"]
keywords = ["cli", "ASCII", "Beast", "game", "homage"]
include = [
	"../README.md",
	"src/**",
	"Cargo.toml",
	"Cargo.lock",
	"LICENSE",
	"tests/**",
]

[[bin]]
name = "beast"
path = "src/main.rs"

[[bin]]
name = "submit_solution"
path = "cmd/submit_proof.rs"

[dependencies]
dotenv = "0.15.0"
rand = "0.9.1"
ron = "0.10.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = [
	"serde",
	"formatting",
	"parsing",
	"local-offset",
] }
game_logic = { path = "../game_logic", features = [] }
risc0-zkvm = "2.3.0"
sp1-sdk = "5.0.0"
bincode = "1.3.3"
alloy = { version = "0.15", features = ["default", "signer-keystore"] }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer/", rev = "8a3a6448c974d09c645f3b74d4c9ff9d2dd27249" }
tokio = { version = "1", features = ["time"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
dialoguer = { version = "0.11.0" }
ureq = "2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon", "winuser"] }

[package.metadata.risc0]
methods = ["./risc0_program/"]

[build-dependencies]
risc0-build = { version = "2.3.0" }
sp1-build = "5.0.0"

[features]
devnet = []
holesky-stage = []
holesky = []
mainnet = []
