[package]
name = "game_logic"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.9.1", optional = true }

[features]
default = ["dep:rand"]
# This features disables the deps and logic that isn't risc0 compatible
zkvm = []
