[package]
name = "parity_games_generator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9.1" }
hex = "0.4.3"
primitive-types = "0.12.2"

[features]
default = ["devnet"]
devnet = []
holesky-stage = []
holesky = []
mainnet = []
sepolia = []
