[package]
name = "beast_1984_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0.203" }
serde_json = "1.0.117"
sp1-zkvm = { version = "5.0.0", features = ["verify"] }
game_logic = { path = "../../game_logic", features = ["zkvm"] }

[[bin]]
name = "beast_1984_program"
path = "./src/main.rs"
