[package]
name = "parity"
version = "0.3.0"
edition = "2024"

[dependencies]
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer/", rev = "5f309e60f04425abc5480c319fe5b937b6309666" }
alloy = { version = "0.15", features = ["default", "signer-keystore"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
